removed fixed heading, fixed sidebar on small devices stretches through entire screen

--- a/src/components/molecules/FilterPanel/FilterPanel.module.scss
+++ b/src/components/molecules/FilterPanel/FilterPanel.module.scss
@@ -2,7 +2,10 @@
 
 .container {
   padding: 1rem;
-  border-bottom: 1px solid $interactiveElementColor;
+
+  &:not(:last-child) {
+    border-bottom: 1px solid $interactiveElementColor;
+  }
 }
 
 .buttonContainer {
