--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -9,7 +9,6 @@
 
 body {
   min-height: 100vh;
-  margin: 80px 0 0;
   font-family: $primary-font;
 }
 
